--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Swaraj Gondchawar | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -13,182 +13,208 @@
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">MyPortfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<!-- ================= NAVBAR ================= -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand fw-bold" href="#">Swaraj Gondchawar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- Home Section -->
-    <section id="home" class="vh-100 d-flex align-items-center bg-light">
-        <div class="container text-center">
-            <h1 class="display-4">Hi, I'm Swaraj</h1>
-            <p class="lead">Web Developer | Student</p>
-            <a href="#contact" class="btn btn-primary">Contact Me</a>
+        <div class="collapse navbar-collapse" id="navMenu">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
         </div>
-    </section>
-    <!-- About Section -->
-    <section id="about" class="py-5">
-        <div class="container">
+    </div>
+</nav>
+
+<!-- ================= HOME ================= -->
+<section id="home" class="vh-100 d-flex align-items-center">
+    <div class="container">
+        <div class="row align-items-center">
+
+            <div class="col-md-6">
+                <h1 class="fw-bold mb-3">
+                    Hello, I'm <span class="text-primary">Swaraj</span>
+                </h1>
+                <p class="lead mb-4">
+                    Aspiring Web Developer & Engineering Student passionate about
+                    building clean, responsive, and modern websites.
+                </p>
+                <a href="#contact" class="btn btn-primary btn-lg me-3">Hire Me</a>
+                <a href="#projects" class="btn btn-outline-primary btn-lg">My Work</a>
+            </div>
+
+            <div class="col-md-6 text-center">
+                <img src="https://via.placeholder.com/350"
+                     class="img-fluid rounded-4 shadow-lg"
+                     alt="Profile Image">
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<!-- ================= ABOUT ================= -->
+<section id="about" class="py-5">
+    <div class="container">
+        <div class="card border-0 shadow-lg p-4">
             <div class="row align-items-center">
-                
-                <div class="col-md-6">
-                    <h2 class="mb-4">About Me</h2>
+
+                <div class="col-md-4 text-center">
+                    <img src="https://via.placeholder.com/250"
+                         class="img-fluid rounded-4 mb-3"
+                         alt="About Image">
+                </div>
+
+                <div class="col-md-8">
+                    <h2 class="mb-3">About Me</h2>
                     <p>
-                        I am a motivated and enthusiastic student with a strong interest in web development.
-                        I enjoy building responsive and user-friendly websites using modern web technologies.
+                        I am a motivated engineering student with a strong interest in web development.
+                        I enjoy designing responsive and user-friendly web applications using modern tools.
                     </p>
                     <p>
-                        This single-page portfolio website is created as part of my web development internship
-                        to demonstrate my skills in HTML, CSS, Bootstrap, and JavaScript.
+                        This single-page portfolio website is developed as part of my web development
+                        internship to demonstrate my skills in HTML, CSS, Bootstrap, and JavaScript.
                     </p>
-                </div>
-
-                <div class="col-md-6 text-center">
-                    <img src="https://via.placeholder.com/300"
-                         class="img-fluid rounded-circle"
-                         alt="Profile Image">
+                    <a href="#contact" class="btn btn-primary">Contact Me</a>
                 </div>
 
             </div>
         </div>
-    </section>
-    <!-- Skills Section -->
-    <section id="skills" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-5">Skills</h2>
+    </div>
+</section>
 
-            <div class="row">
-                <div class="col-md-6 mb-4">
-                    <h6>HTML5</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-success" style="width: 90%;">90%</div>
+<!-- ================= SKILLS ================= -->
+<section id="skills" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center mb-5">Skills</h2>
+
+        <div class="row g-4">
+
+            <div class="col-md-3">
+                <div class="card text-center p-4 shadow-sm">
+                    <h5>HTML5</h5>
+                    <p class="text-muted">Advanced</p>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card text-center p-4 shadow-sm">
+                    <h5>CSS3</h5>
+                    <p class="text-muted">Advanced</p>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card text-center p-4 shadow-sm">
+                    <h5>Bootstrap</h5>
+                    <p class="text-muted">Intermediate</p>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card text-center p-4 shadow-sm">
+                    <h5>JavaScript</h5>
+                    <p class="text-muted">Intermediate</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<!-- ================= PROJECTS ================= -->
+<section id="projects" class="py-5">
+    <div class="container">
+        <h2 class="text-center mb-5">Projects</h2>
+
+        <div class="row g-4">
+
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Single Page Portfolio Website</h5>
+                        <p class="card-text">
+                            A responsive portfolio website created using HTML, CSS, and Bootstrap.
+                        </p>
+                        <p class="text-muted">HTML • CSS • Bootstrap</p>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-md-6 mb-4">
-                    <h6>CSS3</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-info" style="width: 85%;">85%</div>
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">College Event Management System</h5>
+                        <p class="card-text">
+                            A system to manage college events and registrations efficiently.
+                        </p>
+                        <p class="text-muted">HTML • CSS • JavaScript</p>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-md-6 mb-4">
-                    <h6>Bootstrap</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" style="width: 80%;">80%</div>
-                    </div>
-                </div>
-
-                <div class="col-md-6 mb-4">
-                    <h6>JavaScript</h6>
-                    <div class="progress">
-                        <div class="progress-bar bg-warning text-dark" style="width: 70%;">70%</div>
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Online Quiz Application</h5>
+                        <p class="card-text">
+                            An interactive quiz app with MCQs and score calculation.
+                        </p>
+                        <p class="text-muted">HTML • CSS • JavaScript</p>
                     </div>
                 </div>
             </div>
 
         </div>
-    </section>
-    <!-- Projects Section -->
-    <section id="projects" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-5">Projects</h2>
+    </div>
+</section>
 
-            <div class="row">
+<!-- ================= CONTACT ================= -->
+<section id="contact" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center mb-5">Contact Me</h2>
 
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Single Page Portfolio Website</h5>
-                            <p class="card-text">
-                                A responsive single-page portfolio website created using HTML, CSS, and Bootstrap
-                                to showcase personal details, skills, and projects.
-                            </p>
-                        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+
+                <form>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" placeholder="Your Name" required>
                     </div>
-                </div>
 
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">College Event Management System</h5>
-                            <p class="card-text">
-                                A web-based system to manage college events, registrations, and participants
-                                efficiently using frontend technologies.
-                            </p>
-                        </div>
+                    <div class="mb-3">
+                        <input type="email" class="form-control" placeholder="Your Email" required>
                     </div>
-                </div>
 
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Online Quiz Application</h5>
-                            <p class="card-text">
-                                An interactive quiz application with multiple-choice questions and score calculation
-                                using JavaScript.
-                            </p>
-                        </div>
+                    <div class="mb-3">
+                        <textarea class="form-control" rows="4" placeholder="Your Message"></textarea>
                     </div>
-                </div>
+
+                    <button class="btn btn-primary w-100 btn-lg">Send Message</button>
+                </form>
 
             </div>
         </div>
-    </section>
-    <!-- Contact Section -->
-    <section id="contact" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-5">Contact Me</h2>
+    </div>
+</section>
 
-            <div class="row justify-content-center">
-                <div class="col-md-6">
+<!-- ================= FOOTER ================= -->
+<footer class="text-center text-white py-3">
+    © 2026 Swaraj Gondchawar | Single Page Portfolio Website
+</footer>
 
-                    <form>
-                        <div class="mb-3">
-                            <label class="form-label">Name</label>
-                            <input type="text" class="form-control" placeholder="Enter your name" required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label class="form-label">Email</label>
-                            <input type="email" class="form-control" placeholder="Enter your email" required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label class="form-label">Message</label>
-                            <textarea class="form-control" rows="4" placeholder="Enter your message"></textarea>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary w-100">
-                            Send Message
-                        </button>
-                    </form>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Custom JS -->
-    <script src="js/script.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
